vlib/v/parser/tests/enum_method_duplicated_err.vv
@[flag]
enum Flags {
	bit0
	bit1
	bit2
	bit3
	bit4
	bit5
	bit6
	bit7
}

fn (f Flags) has(f2 Flags) bool {
	return f & f2 > 0
}

fn main() {}
